<resources>
    <string name="app_name">MovieTMDB</string>
    <string name="error_request">Something Error Happen, Please Try Again</string>
    <string name="sample_title">The Angry Birds Movie</string>
    <string name="sample_year">2012</string>
    <string name="sample_overview">Lightning McQueen, a hotshot rookie race car driven to succeed, discovers that life is about the journey, not the finish line, when he finds himself unexpectedly detoured in the sleepy Route 66 town of Radiator Springs. On route across the country to the big Piston Cup Championship in California to compete against two seasoned pros, McQueen gets to know the towns offbeat characters.</string>
    <string name="sample_rating">7.4</string>
    <string name="sample_vote_count">345</string>
    <string name="sample_popularity">82.0000</string>
    <string name="review">Review</string>
    <string name="genre">Genre</string>
    <string name="no_review">No Review</string>
</resources>